# autotool-subdirs

./: .gitignore  Makefile.am  README.md  autosub-top.h  autosub_top.h  configure.ac
include/: Makefile.am  autosub.h
src/: Makefile.am  autosub.c  prog.c
